<resources>
    <string name="app_name">Just Java</string>

<!--Header text for the list of toppings [CHAR LIMIT=20]    -->
    <string name="toppings">Toppings</string>

    <string name="chocolate">Chocolate</string>

    <string name="add_your_name">Add your name, please!</string>

    <string name="whipped_cream">Whipped Cream</string>

    <string name="quantity">quantity</string>

    <string name="order">order</string>

    <string name="price">$ 0</string>

<!--Localization java code  -->
    <string name="create_order_summary">
        Name : %s \n
        Add Whipped Cream?: %b \n
        Add The Chocolate?: %b \n
        Quantity: %d \n
        Total: $ %d \n
        Thank you!
    </string>

    <string name="toast_increment">
    You cannot order more than 10 cups
    </string>

    <string name="toast_decrement">
    YYou cannot order less than 1 cup
    </string>

</resources>
